--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ rich~=13.9.4
 setuptools~=75.3.0
 highway-env>=1.8.2
 numpy~=1.24.4
-stable-baselines3~=2.3.2
-sb3-contrib~=2.3.0
+stable-baselines3>=2.4.0
+sb3-contrib~=2.4.0
