--- a/scripts/configs/HighwayEnv/switch/switch_dc0.yaml
+++ b/scripts/configs/HighwayEnv/switch/switch_dc0.yaml
@@ -1,7 +1,7 @@
 # parameters
 
 params:
-  - ctrl_id: 1
+  - ctrl_id: ctrl_1
     thresh:
       time_delay: 0.2
-      cross_lane_headway: 2.0
+      cross_lane_headway: 4.0
